# codeassure-cli

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  build_entry.py  codeassure.json  codeassure.spec  docker-compose.yml  pyproject.toml  test_judge.py
brev_docker_files/: docker-compose.yml  docker-compose_nemotron.yml  init.sh
docs/: architecture.md  current_vs_with_graph.md  finding-relationship-graph.md
sast_verify/: cli.py  config.py  grouping.py  pipeline.py  preprocess.py  retrieval.py  schema.py
sast_verify/agents/: __init__.py  analyzer.py  deps.py  runner.py  tools.py
sast_verify/eval/: evaluate.py
sast_verify/prompts/: __init__.py  analyzer.py  rule_policies.py
tests/: test_adk_state_integration.py  test_evidence_validation.py  test_parse_verdict.py  test_retrieval.py  test_tools.py
