[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "codeassure"
version = "0.1.0"
description = "AI-powered SAST finding verification"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic-ai-slim[openai]",
    "pydantic>=2.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
include = ["sast_verify*"]

[project.scripts]
codeassure = "sast_verify.cli:main"
